created model classes for transaction details activity and added ids for that merchant transaction related layouts

--- a/app/src/main/res/layout/activity_edit_team_member.xml
+++ b/app/src/main/res/layout/activity_edit_team_member.xml
@@ -210,11 +210,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:autofillHints="AUTOFILL_HINT_SMS_OTP"
-
+                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-_."
                 android:fontFamily="@font/opensans_semibold"
                 android:imeOptions="actionNext"
-                android:inputType="text|textNoSuggestions"
-                android:maxLength="30"
+                android:importantForAutofill="no"
+                android:inputType="textEmailAddress|textNoSuggestions"
+                android:maxLength="255"
                 android:maxLines="1"
                 android:padding="@dimen/_14sdp"
                 android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
