--- a/app/src/main/res/layout/activity_business_refund.xml
+++ b/app/src/main/res/layout/activity_business_refund.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/et_bg_gray"
     android:orientation="vertical"
     tools:context=".view.business.MerchantTransactionDetailsActivity">
 
 
-
-<LinearLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -23,7 +22,7 @@
             android:paddingLeft="@dimen/_22sdp">
 
             <LinearLayout
-                android:id="@+id/withbankCloseLL"
+                android:id="@+id/lycloseLL"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginTop="@dimen/_40sdp"
@@ -90,6 +89,7 @@
                             android:orientation="horizontal">
 
                             <TextView
+                                android:id="@+id/RefundamountTV"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="@dimen/_6sdp"
@@ -110,7 +110,7 @@
 
 
                         <TextView
-                            android:id="@+id/withBankDescrptnTV"
+                            android:id="@+id/refundReasonTV"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/_11sdp"
@@ -153,7 +153,7 @@
                                 android:textSize="@dimen/_11ssp" />
 
                             <TextView
-                                android:id="@+id/withBankStatusTV"
+                                android:id="@+id/refundStatusTV"
                                 android:layout_width="@dimen/_68sdp"
                                 android:layout_height="@dimen/_14sdp"
                                 android:layout_marginTop="@dimen/_6sdp"
@@ -184,7 +184,7 @@
                                 android:textSize="@dimen/_11ssp" />
 
                             <TextView
-                                android:id="@+id/withbankDatetimeTV"
+                                android:id="@+id/refundDatetimeTV"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -214,7 +214,7 @@
                                 android:textSize="@dimen/_11ssp" />
 
                             <TextView
-
+                                android:id="@+id/refundreferenceTV"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -229,8 +229,8 @@
                                 android:layout_width="@dimen/_11sdp"
                                 android:layout_height="14dp"
                                 android:layout_gravity="center"
-                                android:contentDescription="@string/reference_id"
                                 android:layout_marginLeft="@dimen/_6sdp"
+                                android:contentDescription="@string/reference_id"
                                 android:src="@drawable/ic_copy" />
                         </LinearLayout>
 
@@ -253,6 +253,7 @@
                                 android:textSize="@dimen/_11ssp" />
 
                             <TextView
+                                android:id="@+id/refundfeeTV"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="@dimen/_4sdp"
@@ -292,7 +293,7 @@
                                 android:textSize="@dimen/_11ssp" />
 
                             <TextView
-
+                                android:id="@+id/refundtotalAmountTV"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="@dimen/_4sdp"
@@ -348,7 +349,7 @@
 
 
                             <TextView
-                                android:id="@+id/withBankWithdrawidTV"
+                                android:id="@+id/refundreciptantNameTV"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -381,7 +382,7 @@
 
 
                             <TextView
-                                android:id="@+id/withBankReferenceIDTV"
+                                android:id="@+id/refundReciptantEmailTV"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -440,7 +441,7 @@
                                 android:textSize="@dimen/_11ssp" />
 
                             <TextView
-
+                                android:id="@+id/refundOTIdateTV"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -471,7 +472,7 @@
                                 android:textSize="@dimen/_11ssp" />
 
                             <TextView
-
+android:id="@+id/refundOTIgrossamountTV"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="@dimen/_4sdp"
@@ -511,7 +512,7 @@
                                 android:textSize="@dimen/_11ssp" />
 
                             <TextView
-                                android:id="@+id/withBankProcessFee"
+                                android:id="@+id/refundOTIFeeTV"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="@dimen/_4sdp"
@@ -551,6 +552,7 @@
                                 android:textSize="@dimen/_11ssp" />
 
                             <TextView
+                                android:id="@+id/refundOTINetamountTV"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="@dimen/_4sdp"
@@ -590,6 +592,7 @@
                                 android:textSize="@dimen/_11ssp" />
 
                             <TextView
+                                android:id="@+id/refundOTIrefrenceTV"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
