--- a/app/src/main/res/layout/activity_monthly_service_fee.xml
+++ b/app/src/main/res/layout/activity_monthly_service_fee.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/et_bg_gray"
     android:orientation="vertical"
     tools:context=".view.business.MerchantTransactionDetailsActivity">
@@ -21,7 +21,7 @@
             android:paddingLeft="@dimen/_22sdp">
 
             <LinearLayout
-                android:id="@+id/withbankCloseLL"
+                android:id="@+id/lycloseLL"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginTop="@dimen/_40sdp"
@@ -45,6 +45,7 @@
                 android:textSize="@dimen/_16ssp" />
 
         </LinearLayout>
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -64,20 +65,21 @@
                     android:layout_marginBottom="@dimen/_7sdp"
                     android:background="@color/white"
                     app:cardCornerRadius="@dimen/_10sdp">
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
 
                         <TextView
-
+                            android:id="@+id/MSFTV"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:text="Monthly Service Fee"
                             android:layout_marginTop="@dimen/_22sdp"
                             android:layout_marginBottom="@dimen/_6sdp"
                             android:fontFamily="@font/opensans_semibold"
+                            android:text="Monthly Service Fee"
                             android:textColor="@color/black"
                             android:textSize="@dimen/_12ssp" />
 
@@ -89,6 +91,7 @@
                             android:orientation="horizontal">
 
                             <TextView
+                                android:id="@+id/MSFamountTV"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/opensans_bold"
@@ -104,6 +107,7 @@
                                 android:textColor="@color/primary_color"
                                 android:textSize="@dimen/_11ssp" />
                         </LinearLayout>
+
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/_1sdp"
@@ -113,6 +117,7 @@
                             android:layout_marginRight="@dimen/_11sdp"
                             android:layout_marginBottom="@dimen/_11sdp"
                             android:background="@color/blue_light" />
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -132,6 +137,7 @@
                                 android:textSize="@dimen/_11ssp" />
 
                             <TextView
+                                android:id="@+id/MSFstatusTV"
 
                                 android:layout_width="@dimen/_68sdp"
                                 android:layout_height="@dimen/_14sdp"
@@ -144,6 +150,7 @@
                                 android:textSize="@dimen/_7ssp" />
 
                         </LinearLayout>
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -151,9 +158,7 @@
                             android:paddingLeft="@dimen/_11sdp"
                             android:paddingTop="@dimen/_8sdp"
                             android:paddingRight="@dimen/_10sdp"
-                            android:paddingBottom="@dimen/_11sdp"
-
-                            >
+                            android:paddingBottom="@dimen/_11sdp">
 
                             <TextView
                                 android:layout_width="match_parent"
@@ -165,13 +170,13 @@
                                 android:textSize="@dimen/_11ssp" />
 
                             <TextView
-
+                                android:id="@+id/MSFdateTV"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:text="07/27/2020 10:36:14"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:gravity="right"
+                                android:text="07/27/2020 10:36:14"
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_11ssp" />
                         </LinearLayout>
@@ -196,7 +201,7 @@
                                 android:textSize="@dimen/_11ssp" />
 
                             <TextView
-
+                                android:id="@+id/MSfreferenceIdTV"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -213,6 +218,7 @@
                                 android:layout_marginLeft="@dimen/_6sdp"
                                 android:src="@drawable/ic_copy" />
                         </LinearLayout>
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -232,6 +238,7 @@
                                 android:textSize="@dimen/_11ssp" />
 
                             <TextView
+                                android:id="@+id/MSFmerchantbalanceTV"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
