--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -87,6 +87,7 @@
     <color name="txn_resend_invitation_status">#FAD0D0</color>
 
     <color name="txn_in_active_status_bg">#FAD0D0</color>
+    <color name="txn_active_bg">#E7F7E8</color>
 
     <color name="transparent_black">#43000000</color>
     <color name="txn_failed_trans">#22DD2C00</color>
