--- a/app/src/main/res/layout/activity_confirm_password.xml
+++ b/app/src/main/res/layout/activity_confirm_password.xml
@@ -84,7 +84,7 @@
                     android:autofillHints="creditCardSecurityCode"
                     android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?"
                     android:fontFamily="@font/opensans_semibold"
-                    android:hint="Current Password"
+                    android:hint="@string/confirm_password"
                     android:imeOptions="actionDone"
                     android:inputType="textPassword"
                     android:longClickable="false"
