--- a/app/src/main/res/layout/activity_add_recipient.xml
+++ b/app/src/main/res/layout/activity_add_recipient.xml
@@ -77,6 +77,7 @@
                         android:layout_marginStart="@dimen/_8sdp"
                         android:layout_marginEnd="@dimen/_5sdp"
                         android:layout_weight="1"
+                        android:text="eeeeee"
                         android:background="@android:color/transparent"
                         android:cursorVisible="true"
                         android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789- "
