--- a/app/src/main/res/layout/activity_pay_request.xml
+++ b/app/src/main/res/layout/activity_pay_request.xml
@@ -200,6 +200,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="bottom"
+                                    android:layout_marginBottom="@dimen/_2sdp"
                                     android:fontFamily="@font/opensans_bold"
                                     android:text=" CYN"
                                     android:textColor="@color/primary_black"
