--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -61,4 +61,24 @@
             <enum name="persistent" value="2" />
         </attr>
     </declare-styleable>
+
+    <declare-styleable name="AnimatedGradientTextView">
+        <attr name="colors" format="reference"/>
+        <attr name="simultaneousColors" format="integer"/>
+        <attr name="angle" format="integer"/>
+        <attr name="speed" format="integer"/>
+        <attr name="maxFPS" format="integer"/>
+        <attr name="customFont" format="string"/>
+    </declare-styleable>
+
+    <array name="default_gradient_colors">
+        <item>@color/primary_green</item>
+        <item>@color/primary_green</item>
+        <item>@color/primary_green</item>
+        <item>@color/teal_200</item>
+        <item>@color/white</item>
+        <item>@color/primary_green</item>
+        <item>@color/primary_green</item>
+        <item>@color/primary_green</item>
+    </array>
 </resources>
