--- a/app/src/main/res/layout/activity_signature.xml
+++ b/app/src/main/res/layout/activity_signature.xml
@@ -16,7 +16,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
+            android:background="@drawable/backgrndbtmcornrs"
             android:padding="@dimen/_12sdp">
 
             <ImageView
@@ -59,7 +59,7 @@
                 android:id="@+id/csv_signature_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="@dimen/_35sdp" />
+                android:layout_marginBottom="@dimen/_32sdp" />
 
             <View
                 android:layout_width="wrap_content"
