--- a/app/src/main/res/drawable-hdpi/bg_et_inactive.xml
+++ b/app/src/main/res/drawable-hdpi/bg_et_inactive.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="@dimen/_7sdp"/>
     <!--    <padding android:left="10dp" android:right="10dp" android:top="10dp" android:bottom="10dp"/>-->
-    <stroke android:width="@dimen/_1sdp" android:color="#fafafa"/>
+    <stroke android:width="@dimen/_1sdp" android:color="@color/bg_color"/>
 </shape>
