--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
 
 
     <color name="vlight_gray">#E8E8E8</color>
+    <color name="bg_color">#fafafa</color>
     <color name="at_gray">#f2f5f8</color>
     <color name="boxbackgroundgray">#F2F4F5</color>
     <color name="light_gray">#C5C5C5</color>
