image size change

--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -279,10 +279,10 @@
                                 </LinearLayout>
 
                                 <ImageView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
+                                    android:layout_width="@dimen/_55sdp"
+                                    android:layout_height="@dimen/_60sdp"
                                     android:layout_gravity="center"
-                                    android:src="@drawable/ic_identity_verify" />
+                                    android:src="@drawable/aditional" />
 
                             </LinearLayout>
                         </LinearLayout>
