--- a/app/src/main/res/layout/activity_signature.xml
+++ b/app/src/main/res/layout/activity_signature.xml
@@ -2,7 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <LinearLayout
@@ -45,30 +44,31 @@
 
         </RelativeLayout>
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginStart="@dimen/_46sdp"
             android:layout_marginTop="@dimen/_17sdp"
             android:layout_marginEnd="@dimen/_46sdp"
             android:layout_weight="1"
-            android:background="@drawable/bg_white_color">
-
+            android:background="@drawable/bg_white_color"
+            android:orientation="vertical"
+            android:padding="@dimen/_10sdp">
 
             <com.greenbox.coyni.utils.CustomSignatureView
                 android:id="@+id/csv_signature_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="@dimen/_32sdp" />
+                android:layout_height="0dp"
+                android:layout_weight="1" />
 
             <View
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/_2sdp"
-                android:layout_marginStart="@dimen/_14sdp"
-                android:layout_marginTop="@dimen/_170sdp"
-                android:layout_marginEnd="@dimen/_14sdp"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:layout_marginEnd="@dimen/_5sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
                 android:background="@color/light_gray" />
-        </RelativeLayout>
+        </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
