--- a/app/src/main/res/layout/activity_company_info_details.xml
+++ b/app/src/main/res/layout/activity_company_info_details.xml
@@ -82,16 +82,19 @@
                         android:layout_marginBottom="@dimen/_6sdp"
                         android:fontFamily="@font/opensans_bold"
                         android:text=""
+                        android:singleLine="true"
+                        android:ellipsize="marquee"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_24ssp" />
 
                     <TextView
+                        android:id="@+id/business_entity"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginBottom="@dimen/_34sdp"
                         android:fontFamily="@font/opensans_semibold"
-                        android:text="Sole Proprietorship"
+                        android:text=""
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_12ssp" />
                 </LinearLayout>
