latest Transactions, delete card and Bug Fixes

--- a/app/src/main/res/layout/activity_add_benificial_owner.xml
+++ b/app/src/main/res/layout/activity_add_benificial_owner.xml
@@ -529,7 +529,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_14sdp"
-                        android:fontFamily="@font/opensans_bold"
+                        android:fontFamily="@font/opensans_semibold"
                         android:text="@string/MaillingAddress"
                         android:textColor="@color/primary_green"
                         android:textSize="@dimen/_12ssp" />
