--- a/app/src/main/res/layout/activity_review_application.xml
+++ b/app/src/main/res/layout/activity_review_application.xml
@@ -524,9 +524,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/_1sdp"
                         android:layout_marginBottom="@dimen/_12sdp"
-                        android:background="@color/light_gray"
-
-                        />
+                        android:background="@color/light_gray" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -575,11 +573,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/_1sdp"
                         android:layout_marginBottom="@dimen/_12sdp"
-                        android:background="@color/light_gray"
-
-                        />
+                        android:background="@color/light_gray" />
 
                     <TextView
+                        android:id="@+id/tvWebsiteHead"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_1sdp"
@@ -904,7 +901,6 @@
                     android:textSize="@dimen/_10ssp"
                     android:visibility="gone" />
             </LinearLayout>
-
 
             <LinearLayout
                 android:layout_width="match_parent"
