--- a/app/src/main/res/layout/activity_verification_failed.xml
+++ b/app/src/main/res/layout/activity_verification_failed.xml
@@ -1,111 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="none"
-        tools:ignore="UselessParent">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingStart="@dimen/_21sdp"
-        android:paddingEnd="@dimen/_19sdp"
-        >
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_x"
-            android:layout_marginTop="@dimen/_45sdp"
-            android:layout_marginBottom="@dimen/_13sdp"
-            />
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_failed"
-            android:layout_gravity="center"
-            android:layout_marginBottom="@dimen/_24sdp"
-            android:layout_marginTop="@dimen/_20sdp"
-            />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/verification_failed"
-            android:textSize="@dimen/_16ssp"
-            android:fontFamily="@font/opensans_bold"
-            android:gravity="center"
-            android:textColor="@color/primary_black"
-            android:layout_marginBottom="@dimen/_24sdp"
-            />
+        android:scrollbars="none">
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/dear_name"
-            android:textColor="@color/primary_black"
-            android:textSize="@dimen/_11ssp"
-            android:fontFamily="@font/opensans_regular"
-            />
+            android:layout_margin="@dimen/_21sdp"
+            android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="\nThank you for your interest in merchant \nprocessing through coyni. However, we regret to\ninform you that your application has not been\napproved and is no longer in consideration."
-            android:textSize="@dimen/_11ssp"
-            android:textColor="@color/primary_black"
-            android:fontFamily="@font/opensans_regular"
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_15sdp"
+                android:padding="@dimen/_10sdp"
+                android:src="@drawable/ic_x" />
 
-            />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/legal_name_name"
-            android:textColor="@color/primary_black"
-            android:textSize="@dimen/_12ssp"
-            android:fontFamily="@font/opensans_regular"
-            />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/dba_dba"
-            android:textColor="@color/primary_black"
-            android:textSize="@dimen/_12ssp"
-            android:fontFamily="@font/opensans_regular"
-            />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="\nAgain, we thank you for your interest and wish\nyou the best of luck."
-            android:textColor="@color/primary_black"
-            android:textSize="@dimen/_11ssp"
-            android:fontFamily="@font/opensans_regular"
-            />
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardBackgroundColor="@color/primary_color"
-            app:cardCornerRadius="@dimen/_33sdp"
-            android:layout_marginTop="@dimen/_55sdp"
-            >
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:layout_marginBottom="@dimen/_24sdp"
+                android:src="@drawable/ic_failed" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/_24sdp"
                 android:fontFamily="@font/opensans_bold"
                 android:gravity="center"
-                android:paddingTop="@dimen/_13sdp"
-                android:paddingBottom="@dimen/_13sdp"
-                android:text="@string/done"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_12ssp" />
-        </androidx.cardview.widget.CardView>
+                android:text="@string/verification_failed"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_16ssp" />
 
-      </LinearLayout>
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/opensans_regular"
+                android:text="@string/dear_name"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_11ssp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_14sdp"
+                android:fontFamily="@font/opensans_regular"
+                android:text="@string/interest_in_coyni_merchant_application"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_11ssp" />
+
+            <TextView
+                android:id="@+id/tv_legal_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/opensans_regular"
+                android:text="@string/legal_name_name"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_12ssp" />
+
+            <TextView
+                android:id="@+id/tv_dba_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/opensans_regular"
+                android:text="@string/dba_dba"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_12ssp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_14sdp"
+                android:fontFamily="@font/opensans_regular"
+                android:text="@string/we_thank_for_interest"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_11ssp" />
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cv_done"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_55sdp"
+                app:cardBackgroundColor="@color/primary_color"
+                app:cardCornerRadius="@dimen/_33sdp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_bold"
+                    android:gravity="center"
+                    android:paddingTop="@dimen/_13sdp"
+                    android:paddingBottom="@dimen/_13sdp"
+                    android:text="@string/done"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_12ssp" />
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
     </ScrollView>
 </LinearLayout>
