Customer Flow Bug Fixes

--- a/app/src/main/res/layout/activity_edit_address.xml
+++ b/app/src/main/res/layout/activity_edit_address.xml
@@ -549,6 +549,7 @@
                         android:id="@+id/b_addressLineOneET"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                         android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/-#&amp;(),:.;"
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
@@ -613,6 +614,7 @@
                         android:layout_height="wrap_content"
                         android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                         android:fontFamily="@font/opensans_semibold"
+                        android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                         android:imeOptions="actionNext"
                         android:inputType="textVisiblePassword"
                         android:maxLength="50"
@@ -734,6 +736,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:digits="0123456789"
+                        android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionDone"
                         android:importantForAutofill="no"
