--- a/app/src/main/res/layout/activity_agreements.xml
+++ b/app/src/main/res/layout/activity_agreements.xml
@@ -64,12 +64,15 @@
                 android:layout_marginStart="@dimen/_10sdp"
                 android:fontFamily="@font/opensans_bold"
                 android:text="@string/cpactive_agreements"
+                android:visibility="gone"
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_12ssp" />
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/cvActive"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:layout_marginStart="@dimen/_2sdp"
                 android:layout_marginTop="@dimen/_11sdp"
                 android:layout_marginEnd="@dimen/_2sdp"
@@ -98,7 +101,7 @@
                 android:text="@string/pastagree"
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_12ssp"
-                android:visibility="visible"
+                android:visibility="gone"
                 android:id="@+id/pastTV"/>
 
             <androidx.cardview.widget.CardView
@@ -106,6 +109,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_11sdp"
+                android:visibility="gone"
                 android:layout_marginBottom="@dimen/_2sdp"
                 app:cardCornerRadius="@dimen/_11sdp">
 
