--- a/app/src/main/res/layout/activity_application_canceled.xml
+++ b/app/src/main/res/layout/activity_application_canceled.xml
@@ -11,8 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_35sdp"
-        android:padding="@dimen/_10sdp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="@dimen/_10sdp">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -20,22 +20,24 @@
             android:src="@drawable/ic_close" />
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:gravity="center"
         android:orientation="vertical">
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_above="@+id/tvHead"
             android:src="@drawable/ic_failed"
             android:textAlignment="center" />
 
         <TextView
+            android:id="@+id/tvHead"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:layout_marginHorizontal="@dimen/_11sdp"
             android:layout_marginTop="@dimen/_24sdp"
             android:fontFamily="@font/opensans_bold"
@@ -47,6 +49,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/tvHead"
             android:layout_marginStart="@dimen/_21sdp"
             android:layout_marginTop="@dimen/_24sdp"
             android:layout_marginEnd="@dimen/_21sdp"
@@ -56,7 +59,7 @@
             android:text="@string/application_cancelled_message"
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_11ssp" />
-    </LinearLayout>
+    </RelativeLayout>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvDone"
